<resources>
    <string name="app_name">Tanulo App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration"><u>Create new Account</u></string>
    <string name="fill_all_field">Please fill all input field!</string>
    <string name="pass_dont_match">Password do not match the confirm!</string>
    <string name="username">Username</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="register">Registration</string>
    <string name="backlogin">Back to Login</string>
    <string name="time">Time:</string>
    <string name="score">Score:</string>
    <string name="answer">Answer</string>
    <string name="email_not_valid">Email format is not valid</string>
    <string name="check_connection">Please check your internet connection!</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="quiz">Quiz</string>
    <string name="change_password">Change Password</string>
</resources>
